set most files to include

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,7 @@
   Individual imports for each component's styles.
 ============================================================*/
 @import 'components/header';
+@import 'components/loading';
 
 /*==========================================================
   Import Page SCSS Files:
