--- a/scss/components/_loading.scss
+++ b/scss/components/_loading.scss
@@ -7,6 +7,9 @@
     top: 0;
     left: 0;
     z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #loading.loaded {
